# VRX

./: README.md  bash
explorer/: app.py
miner/: miner.cpp  miner.h
node/: p2p.cpp  p2p.h
src/: block.cpp  blockchain.cpp  blockchain.h  crypto.cpp  crypto.h  main.cpp  transaction.cpp  transaction.h
vrxcoin/: CMakeLists.txt  README.md
wallet/: cli.cpp  wallet.cpp  wallet.h
